# nous_mountain_fl

./: .gitignore  CITATION.cff  README.md
carla_mountain/: CITATION.cff  LICENSE-code  README.md  SETUP.md
carla_mountain/examples/: 01_check_elevation.py
mountain_pass_flower_experiments/: README.md  pyproject.toml  requirements.txt
mountain_pass_flower_experiments/configs/: default.yaml  extended.yaml  quick.yaml  quick_extended.yaml
mountain_pass_flower_experiments/data/: expected_files.txt
mountain_pass_flower_experiments/scripts/: run_all.sh  run_all_windows.bat  run_all_windows.ps1  run_all_windows_skip_flower.bat  run_all_windows_skip_flower.ps1  run_extended.sh  run_extended_no_flower.sh  run_extended_quick_windows.bat  run_extended_quick_windows.ps1  run_extended_windows.bat  run_extended_windows.ps1  run_extended_windows_no_flower.bat  run_extended_windows_no_flower.ps1  run_quick_sample.sh  run_quick_sample_windows.bat  run_quick_sample_windows.ps1  setup_windows.bat  setup_windows.ps1
mountain_pass_flower_experiments/src/mountain_pass_fl/: __init__.py  baselines.py  cross_validation.py  data.py  features.py  flower_exp.py  learning_curve.py  make_report.py  metrics.py  models.py  plotting.py  prequential.py  risk.py  run_all.py  run_extended.py  train.py
preprocess/: CITATION.cff  README.md  mapperV3.mlapp
